[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=2.3.0,<3.0.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.0",
    "flask-sqlalchemy>=3.0.0,<3.1.0",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pysnmp>=7.1.17",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "werkzeug>=2.3.0,<3.0.0",
    "minio>=7.2.15",
    "bcrypt>=4.3.0",
    "psutil>=7.0.0",
    "wtforms>=3.2.1",
]
